# K19XXVK035_AM32

./: .gitignore  CMakeLists.txt  README.md  arm-gcc-toolchain.cmake
.github/workflows/: ci-cd.yml
Inc/: common.h  dshot.h  functions.h  signal.h  targets.h
Mcu/K19XXVK035/Inc/: ADC.h  K19xxVK035_it.h  eeprom.h  peripherals.h  serial_telemetry.h
Mcu/K19XXVK035/Src/: ADC.c  IO.c  K19xxVK035_it.c  comparator.c  eeprom.c  peripherals.c  phaseouts.c  serial_telemetry.c
Src/: dshot.c  functions.c  main.c  signal.c  sounds.c
interface/: jlink.cfg
platform/: CmakeLists.txt
platform/Device/NIIET/K1921VK035/Source/: system_K1921VK035.c
platform/Device/NIIET/K1921VK035/Source/GCC/: K1921VK035_bootloader.ld  K1921VK035_no_bootloader.ld
platform/retarget/Template/K1921VK035/: retarget_conf.c
